# singlarity

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_ANALYSIS.md  README.md  pyproject.toml  test-workflow.sh
.claude/: settings.local.json
.claude/hooks/: hook_utils.py  langfuse_hook.py  metrics_hook.py  models.py
scripts/: devassist_daemon.py  setup_credentials.sh
specs/001-dev-assistant-cli/: spec.md
specs/001-dev-assistant-cli/checklists/: requirements.md
src/devassist/: __init__.py
src/devassist/adapters/: gmail.py
src/devassist/ai/: __init__.py  agent_client.py  base_client.py  claude_client.py  prompt_registry.py  prompts.py  tool_executor.py  tools.py  vertex_client.py
src/devassist/cli/: ai.py  ask.py  brief.py  chat.py  config.py  daemon.py  main.py  mcp_prepare.py  prompt.py  prompt_commands.py  security.py  setup.py
src/devassist/core/: __init__.py  aggregator.py  brief_generator.py  config_manager.py  exceptions.py  orchestrator.py  prompt_executor.py  runner.py  runner_manager.py  slack_client.py
src/devassist/daemon/: __init__.py  monitor.py  notifier.py
src/devassist/mcp/: __init__.py  config.py  registry.py
src/devassist/models/: __init__.py  brief.py  config.py  context.py  mcp_config.py  prompt.py
src/devassist/orchestrator/: llm_client.py  prompts.py
src/devassist/resources/: __init__.py  dev-assistant.md  mcp-servers.json  personal-assistant.md
src/devassist/utils/: __init__.py  cache.py  process.py
tests/contract/: test_ai_client_contract.py
tests/unit/: test_ai_commands.py  test_claude_client.py  test_claude_client_static_sessions.py  test_config.py  test_config_manager.py  test_config_manager_mcp.py  test_exceptions.py  test_mcp_config.py  test_mcp_registry.py  test_process_utils.py  test_runner.py  test_runner_manager.py
